# SchemaAnalyzer

./: .gitignore  pyproject.toml  roadmap.md
research/: agent-sdk-and-deep-agents.md  architecture-proposal.md  claude-agent-sdk.md  deep-agents.md
src/: __init__.py  agentic_main.py  main.py  orchestrator.py
src/agents/: analysis.py  discovery.py
src/deep_agents/: table_profiler.py
src/deep_agents/connector_scripts/: postgres_connector.py  snowflake_connector.py
src/prompts/: agentic_analysis.md  agentic_discovery.md  agentic_orchestrator.md  agentic_report.md  analysis_system.md  discovery_system.md  orchestrator_system.md  report_system.md  table_profiler_system.md
src/prompts/templates/: master_template.md  summary_template.md  table_md_template.md
src/tools/: db_tools.py
src/utils/: config_parser.py  feedback_engine.py  master_generator.py  model_router.py  quality_auditor.py  relationship_analyzer.py  report_generator.py  run_logger.py  run_manager.py  summary_generator.py
