[project]
name = "schema-analyzer"
version = "0.1.0"
description = "Agentic schema discovery & analysis — Claude Agent SDK + Deep Agents"
requires-python = ">=3.11"

dependencies = [
    # Claude Agent SDK
    "claude-agent-sdk>=0.1.0",

    # Deep Agents (LangChain)
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",

    # Database connectors
    "asyncpg>=0.30.0",
    "snowflake-connector-python>=3.0.0",
    "azure-storage-blob>=12.0.0",
    "boto3>=1.35.0",
    "pymysql>=1.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
